git commit fixed header contents overflowing to other containers

--- a/index.css
+++ b/index.css
@@ -23,13 +23,8 @@ header {
     overflow: hidden;
 }
 
-h1 {
-    text-align: center;
-}
-h2 {
-    text-align: center;
-    font-size: 40px;
-    
+#logo{
+    margin-top: 20%;
 }
 #mouse-click {
     padding-top: 22px;
@@ -90,6 +85,7 @@ margin-top: 10%;
 #name {
     padding-left: 10%;
     
+    
 }
 
 #email {
@@ -97,7 +93,7 @@ margin-top: 10%;
 }
 
 #message {
-    padding-left: 7%;
+    padding-left: 6%;
     padding-right: 9%;
    
 }
